update building from source

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,4 +5,4 @@
 [submodule "Xamarin.Forms"]
 	path = Xamarin.Forms
 	url = https://github.com/xamarin/Xamarin.Forms.git
-	branch = shell_mvvm
+	branch = shell_work
